Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/ProdHighway__mdt.object-meta.xml
<CustomObject>
    <label>ProdHighway</label>
    <pluralLabel>ProdHighway</pluralLabel>
</CustomObject>