Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>api_key</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>