Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/endpoint_carrierAt__c.field-meta.xml
<CustomField>
    <fullName>endpoint_carrierAt__c</fullName>
    <label>endpoint_carrierAt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>