Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/endpoint_MarkAlerts__c.field-meta.xml
<CustomField>
    <fullName>endpoint_MarkAlerts__c</fullName>
    <label>endpoint_MarkAlerts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>