Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/endpoint_MarkOnboarding__c.field-meta.xml
<CustomField>
    <fullName>endpoint_MarkOnboarding__c</fullName>
    <label>endpoint_MarkOnboarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>