Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/endpoint_NewOnboarding__c.field-meta.xml
<CustomField>
    <fullName>endpoint_NewOnboarding__c</fullName>
    <label>endpoint_NewOnboarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>