Integrations/Highway/force-app/main/default/objects/ProdHighway__mdt/fields/endpoint_SyncCarrier__c.field-meta.xml
<CustomField>
    <fullName>endpoint_SyncCarrier__c</fullName>
    <label>endpoint_SyncCarrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>